deploy/aspnet-app/L1-foo/overlays/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main
  # namespace: ingress-common
  # annotations:
    # alb.ingress.kubernetes.io/scheme: internet-facing
    # alb.ingress.kubernetes.io/group.name: main
spec:
  # ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /foo
          pathType: Prefix
          backend:
            service:
              name: api-foo
              port:
                number: 80
